# Ray-tracing-engine

./: CMakeLists.txt  README.md  run_all.sh  run_pt.sh  run_sppm.sh
include/: aabb.hpp  camera.hpp  curve.hpp  group.hpp  hit.hpp  image.hpp  kdtree.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  plane.hpp  pt.hpp  ray.hpp  revsurface.hpp  scene_parser.hpp  sphere.hpp  sppm.hpp  stb_image.h  texture.hpp  transform.hpp  triangle.hpp  utils.hpp
src/: main.cpp  scene_parser.cpp
testcases/: bunny.txt  china.txt  dispersion.txt  dof.txt  heart.txt  smallpt.txt  vase.txt
